[gd_scene load_steps=26 format=3 uid="uid://bmkjgidroq0ek"]

[ext_resource type="Theme" uid="uid://c30mdi5ed2iah" path="res://assets/fonts/monospace.tres" id="1_m8h0s"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="1_osepa"]
[ext_resource type="Script" uid="uid://cl8am1dq57b4" path="res://godot/entities/Entities.gd" id="2_krip0"]
[ext_resource type="Script" uid="uid://b1a8n01ih2ig0" path="res://godot/entities/EntityPlayer.gd" id="3_i14ea"]
[ext_resource type="Script" uid="uid://ml1jfdu58bxm" path="res://godot/script_environment/SimulateInput.gd" id="4_sghct"]
[ext_resource type="SpriteFrames" uid="uid://cftgtps75voyf" path="res://assets/characters/lune_blade/LuneBlade.tres" id="6_mwwg5"]
[ext_resource type="Resource" uid="uid://cn2lrsmx3i3wh" path="res://godot/resources/default.tres" id="8_7bxlx"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="16_15rco"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="17_5qqfe"]
[ext_resource type="Script" uid="uid://c1vp0ojjvaby1" path="res://addons/godot_state_charts/parallel_state.gd" id="17_vra06"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="18_vra06"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="19_5qqfe"]

[sub_resource type="GDScript" id="GDScript_uwghf"]
script/source = "extends Node2D


func _on_wall_body_entered(body: Node2D) -> void:
	if body is EntityPlayer:
		body.position = Vector2(0, -77)
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btrx0"]
size = Vector2(1152.98, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwghf"]
size = Vector2(40, 400)

[sub_resource type="GDScript" id="GDScript_0pclf"]
resource_name = "follow_ground"
script/source = "extends Camera2D

@export var ground: StaticBody2D


func _ready() -> void:
	_on_viewport_size_changed()
	get_viewport().connect(\"size_changed\", _on_viewport_size_changed)


func _on_viewport_size_changed() -> void:
	var screen_size := get_viewport_rect().size

	position.y = ground.position.y - screen_size.y * 0.4
"

[sub_resource type="Animation" id="Animation_llv2m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_3op1n"]
resource_name = "fall"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fall"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="Animation" id="Animation_mb05r"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 6]
}

[sub_resource type="Animation" id="Animation_dvuyy"]
resource_name = "jump"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="Animation" id="Animation_78ohg"]
resource_name = "run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 4]
}

[sub_resource type="Animation" id="Animation_mwwg5"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 5]
}

[sub_resource type="Animation" id="Animation_15rco"]
resource_name = "dash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dash"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dvuyy"]
_data = {
&"RESET": SubResource("Animation_llv2m"),
&"dash": SubResource("Animation_15rco"),
&"fall": SubResource("Animation_3op1n"),
&"idle": SubResource("Animation_mb05r"),
&"jump": SubResource("Animation_dvuyy"),
&"run": SubResource("Animation_78ohg"),
&"walk": SubResource("Animation_mwwg5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rlytp"]
size = Vector2(15, 18)

[node name="Node2D" type="Node2D"]
script = SubResource("GDScript_uwghf")

[node name="Ground" type="StaticBody2D" parent="."]
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Ground"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.49
offset_top = -20.0
offset_right = 576.49
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("RectangleShape2D_btrx0")

[node name="LeftWall" type="Area2D" parent="."]
position = Vector2(-596, -180)
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="LeftWall"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -200.0
offset_right = 20.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("RectangleShape2D_uwghf")

[node name="RightWall" type="Area2D" parent="."]
position = Vector2(597, -180)
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="RightWall"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -200.0
offset_right = 20.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource("RectangleShape2D_uwghf")

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("ground")]
script = SubResource("GDScript_0pclf")
ground = NodePath("../Ground")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Editor" type="VBoxContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="CodeEdit" type="TextEdit" parent="UI/Editor"]
custom_minimum_size = Vector2(300, 220)
layout_mode = 2
theme = ExtResource("1_m8h0s")
text = "//hero.jump()
hero.dash_right()
hero.dash_left()
//hero.walk_left()
//hero.walk_right()"

[node name="Run" type="Button" parent="UI/Editor"]
layout_mode = 2
text = "Run"

[node name="StateChartDebugger" parent="UI" instance=ExtResource("1_osepa")]
offset_left = 575.0
offset_right = -2.0
offset_bottom = -6.0
theme = ExtResource("1_m8h0s")
initial_node_to_watch = NodePath("../../Entities/Player/StateChart")

[node name="Entities" type="Node" parent="."]
script = ExtResource("2_krip0")

[node name="Player" type="CharacterBody2D" parent="Entities" node_paths=PackedStringArray("code_edit", "input", "gsc")]
position = Vector2(0, -77)
scale = Vector2(4, 4)
script = ExtResource("3_i14ea")
code_edit = NodePath("../../UI/Editor/CodeEdit")
input = NodePath("SimulateInput")
stats = ExtResource("8_7bxlx")
gsc = NodePath("StateChart")
metadata/_edit_group_ = true

[node name="Sprite" type="AnimatedSprite2D" parent="Entities/Player"]
texture_filter = 1
sprite_frames = ExtResource("6_mwwg5")
animation = &"walk"
frame = 5

[node name="Animation" type="AnimationPlayer" parent="Entities/Player"]
root_node = NodePath("../Sprite")
callback_mode_process = 0
libraries = {
&"": SubResource("AnimationLibrary_dvuyy")
}

[node name="SimulateInput" type="Node" parent="Entities/Player" node_paths=PackedStringArray("code_edit")]
script = ExtResource("4_sghct")
code_edit = NodePath("../../../UI/Editor/CodeEdit")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/Player"]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_rlytp")

[node name="StateChart" type="Node" parent="Entities/Player"]
script = ExtResource("16_15rco")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="ParallelState" type="Node" parent="Entities/Player/StateChart"]
script = ExtResource("17_vra06")

[node name="Locomotion" type="Node" parent="Entities/Player/StateChart/ParallelState"]
script = ExtResource("17_5qqfe")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion"]
script = ExtResource("18_vra06")

[node name="ToWalking" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion/Idle"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Walk")
event = &"to_walking"
delay_in_seconds = "0.0"

[node name="ToDash" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion/Idle"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Dash")
event = &"to_dash"
delay_in_seconds = "0.0"

[node name="Walk" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion"]
script = ExtResource("18_vra06")

[node name="ToIdle" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion/Walk"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="ToRunning" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion/Walk"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Run")
event = &"to_running"
delay_in_seconds = "0.0"

[node name="ToDash" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion/Walk"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Dash")
event = &"to_dash"
delay_in_seconds = "0.0"

[node name="Run" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion"]
script = ExtResource("18_vra06")

[node name="ToIdle" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion/Run"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="ToWalking" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion/Run"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Walk")
event = &"to_walking"
delay_in_seconds = "0.0"

[node name="ToDash" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion/Run"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Dash")
event = &"to_dash"
delay_in_seconds = "0.0"

[node name="Dash" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion"]
script = ExtResource("18_vra06")

[node name="ToIdle" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion/Dash"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="ToWalking" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion/Dash"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Walk")
event = &"to_walking"
delay_in_seconds = "0.0"

[node name="AirBorne" type="Node" parent="Entities/Player/StateChart/ParallelState"]
script = ExtResource("17_5qqfe")
initial_state = NodePath("Grounded")

[node name="Grounded" type="Node" parent="Entities/Player/StateChart/ParallelState/AirBorne"]
script = ExtResource("18_vra06")

[node name="ToFalling" type="Node" parent="Entities/Player/StateChart/ParallelState/AirBorne/Grounded"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Falling")
event = &"to_falling"
delay_in_seconds = "0.0"

[node name="ToJump" type="Node" parent="Entities/Player/StateChart/ParallelState/AirBorne/Grounded"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Jump")
event = &"to_jump"
delay_in_seconds = "0.0"

[node name="ToIdle" type="Node" parent="Entities/Player/StateChart/ParallelState/AirBorne/Grounded"]
script = ExtResource("19_5qqfe")
to = NodePath("../../../Locomotion/Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="Falling" type="Node" parent="Entities/Player/StateChart/ParallelState/AirBorne"]
script = ExtResource("18_vra06")

[node name="ToGrounded" type="Node" parent="Entities/Player/StateChart/ParallelState/AirBorne/Falling"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Grounded")
event = &"to_grounded"
delay_in_seconds = "0.0"

[node name="Jump" type="Node" parent="Entities/Player/StateChart/ParallelState/AirBorne"]
script = ExtResource("18_vra06")

[node name="ToFalling" type="Node" parent="Entities/Player/StateChart/ParallelState/AirBorne/Jump"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Falling")
event = &"to_falling"
delay_in_seconds = "0.0"

[connection signal="body_entered" from="LeftWall" to="." method="_on_wall_body_entered"]
[connection signal="body_entered" from="RightWall" to="." method="_on_wall_body_entered"]
[connection signal="pressed" from="UI/Editor/Run" to="Entities/Player/SimulateInput" method="_on_run_pressed"]
[connection signal="state_entered" from="Entities/Player/StateChart/ParallelState/Locomotion/Idle" to="Entities/Player" method="_on_idle_state_entered"]
[connection signal="state_physics_processing" from="Entities/Player/StateChart/ParallelState/Locomotion/Idle" to="Entities/Player" method="_on_idle_state_physics_processing"]
[connection signal="state_entered" from="Entities/Player/StateChart/ParallelState/Locomotion/Walk" to="Entities/Player" method="_on_walk_state_entered"]
[connection signal="state_physics_processing" from="Entities/Player/StateChart/ParallelState/Locomotion/Walk" to="Entities/Player" method="_on_walk_state_physics_processing"]
[connection signal="state_entered" from="Entities/Player/StateChart/ParallelState/Locomotion/Run" to="Entities/Player" method="_on_run_state_entered"]
[connection signal="state_exited" from="Entities/Player/StateChart/ParallelState/Locomotion/Run" to="Entities/Player" method="_on_run_state_exited"]
[connection signal="state_physics_processing" from="Entities/Player/StateChart/ParallelState/Locomotion/Run" to="Entities/Player" method="_on_run_state_physics_processing"]
[connection signal="state_entered" from="Entities/Player/StateChart/ParallelState/Locomotion/Dash" to="Entities/Player" method="_on_dash_state_entered"]
[connection signal="state_exited" from="Entities/Player/StateChart/ParallelState/Locomotion/Dash" to="Entities/Player" method="_on_dash_state_exited"]
[connection signal="state_physics_processing" from="Entities/Player/StateChart/ParallelState/Locomotion/Dash" to="Entities/Player" method="_on_dash_state_physics_processing"]
[connection signal="state_entered" from="Entities/Player/StateChart/ParallelState/AirBorne/Grounded" to="Entities/Player" method="_on_grounded_state_entered"]
[connection signal="state_physics_processing" from="Entities/Player/StateChart/ParallelState/AirBorne/Grounded" to="Entities/Player" method="_on_grounded_state_physics_processing"]
[connection signal="state_entered" from="Entities/Player/StateChart/ParallelState/AirBorne/Falling" to="Entities/Player" method="_on_falling_state_entered"]
[connection signal="state_physics_processing" from="Entities/Player/StateChart/ParallelState/AirBorne/Falling" to="Entities/Player" method="_on_falling_state_physics_processing"]
[connection signal="state_entered" from="Entities/Player/StateChart/ParallelState/AirBorne/Jump" to="Entities/Player" method="_on_jump_state_entered"]
[connection signal="state_physics_processing" from="Entities/Player/StateChart/ParallelState/AirBorne/Jump" to="Entities/Player" method="_on_jump_state_physics_processing"]
